refactor: reorganize frontend into feature-based structure